controls/C-0034/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0034-deny-resources-with-automount-service-account-token-enabled"
  labels:
    controlId: "C-0034"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0034/"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods", "serviceaccounts"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: >
        object.kind != 'ServiceAccount' ||
        (
          has(object.automountServiceAccountToken) &&
          object.automountServiceAccountToken == false
        )
      message: "ServiceAccount has \"automountServiceAccountToken\" enabled! (see more at https://kubescape.io/docs/controls/c-0034/)"

    - expression: >
        object.kind != 'Pod' ||
        (
          has(object.spec.automountServiceAccountToken) &&
          object.spec.automountServiceAccountToken == false
        )
      message: "Pod has \"automountServiceAccountToken\" enabled! (see more at https://kubescape.io/docs/controls/c-0034/)"

    - expression: >
        ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'].all(kind, object.kind != kind) ||
        (
          has(object.spec.template.spec.automountServiceAccountToken) &&
          object.spec.template.spec.automountServiceAccountToken == false
        )
      message: "Workload has \"automountServiceAccountToken\" enabled! (see more at https://kubescape.io/docs/controls/c-0034/)"

    - expression: >
        object.kind != 'CronJob' ||
        (
          has(object.spec.jobTemplate.spec.automountServiceAccountToken) &&
          object.spec.jobTemplate.spec.automountServiceAccountToken == false
        )
      message: "CronJob has \"automountServiceAccountToken\" enabled! (see more at https://kubescape.io/docs/controls/c-0034/)"
